<resources>
    <string name="app_name">Boletim Escolar</string>
    <string name="CadastrarMateria">Cadastrar Matéria</string>
    <string name="CadastrarNota">Cadastrar Nota</string>
    <string name="nome">Nome</string>
    <string name="atualizar">Atualizar</string>
    <string name="deletar">Deletar</string>
    <string name="email">E-mail</string>
    <string name="nomeEscola">Nome Escola</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="apagar">Apagar</string>
    <string name="Editar">Editar</string>
    <string name="bemvindo">Alun@,\n Seja bem-vind@!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_novo">NovoActivity</string>
    <string name="title_activity_lista">ListaActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">   andrea@exemplo.com</string>
    <string name="prompt_password">   ********</string>
    <string name="action_sign_in">PRÓXIMO</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Nome de usuário inválido</string>
    <string name="invalid_password">Senha errada</string>
    <string name="login_failed">"Login falhou! Tente novamente"</string>
    <string name="textViewButton_Entrar">ENTRAR</string>
    <string name="textView_Login">Login</string>
    <string name="imageButton_Voltar">Voltar</string>
    <string name="textView_Preencha">Preencha</string>
    <string name="textViewButton_Registrar">Registrar</string>
    <string name="textViewButton_Proximo"> Próximo </string>
    <string name="textViewButton_Salvar">Salvar</string>
    <string name="textViewButton_Voltar">Voltar</string>
    <string name="inputText_Nome">Andrea da Silva</string>
    <string name="textView_Notas">Notas</string>

    <string name="welcome">Welcome</string>

    //itens para o menu
    <string name="action_sair">Sair</string>
    <string name="action_notas">Notas</string>
    <string name="action_materias">Matérias</string>
    <string name="action_conta">Conta</string>
    <string name="cadastro_nota">Cadastrar</string>
    <string name="cadastro_materia">Cadastrar</string>
    <string name="consultar_boletim">Boletim</string>
    <string name="consultar_materia">Consultar Materia</string>
    <string name="title_activity_materia">MateriaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_nota">NotaActivity</string>
    <string name="textView_Cadastro">Cadastro</string>
    <string name="textViewButton_Salvar2">Salvar 2</string>
    <string name="TesteActivity">TESTE</string>
    <string name="button_TesteLogin">Teste</string>
    <string name="nomemateria">Nome da matéria. Ex.: Português... </string>
    <string name="unidade">Unidade. Ex.: 1ª </string>
    <string name="unidade2">Unidade </string>
    <string name="periodo">Período. Ex.: 1º </string>
    <string name="periodo2">Período </string>
    <string name="nota">Nota. Ex.: 9.0 </string>
    <string name="nota2">Nota </string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_menu_teste">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="id">ID</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="textView_PreenchaCampos">Preencha os campos</string>
    <string name="Nota">Ex.: 8.0</string>
    <string name="textView_materiasCadastradas">Matérias Cadastradas</string>
    <string name="textView_preenchaCampo">Preencha o campo</string>
    <string name="textView_dadosUsuario">Dados do Aluno</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_activity_inicio2">InicioActivity2</string>
    <string name="title_activity_materia2">MateriaActivity2</string>
    <string name="title_activity_lista_materia">ListaMateriaActivity</string>
    <string name="title_activity_lista_materias">ListaMaterias</string>

</resources>
