<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_materias"
        android:orderInCategory="101"
        android:title="@string/action_materias"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/cadastrar_materia"
                android:title="@string/cadastro_materia" />
            <item
                android:id="@+id/consulta_materia"
                android:title="@string/consultar_materia" />
        </menu>
    </item>

    <item
        android:id="@+id/action_notas"
        android:orderInCategory="102"
        android:title="@string/action_notas"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/cadastrar_nota"
                android:title="@string/cadastro_nota" />
            <item
                android:id="@+id/consulta_boletim"
                android:title= "@string/consultar_boletim" />
        </menu>
    </item>
    <item
        android:id="@+id/action_contaUsuario"
        android:orderInCategory="103"
        android:title="@string/action_conta"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sair"
        android:orderInCategory="104"
        android:title="@string/action_sair"
        app:showAsAction="never" />
</menu>