<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A5517"
    android:weightSum="2"
    android:orientation="horizontal">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">
    <TextView
        android:id="@+id/list_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/nome" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/list_unidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/unidade2" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/list_periodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/periodo2"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/list_nota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota2"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>

    <Button
        android:id="@+id/buttonApagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apagar" />
    <Button
        android:id="@+id/buttonEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Editar" />
</LinearLayout>
