<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A5517"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CadastroUsuarioActivity">

    <ImageButton
        android:id="@+id/imageButton_voltarMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageButton_Voltar"
        android:onClick="voltarMainActivity"
        android:src="@drawable/ic_back2x"
        android:visibility="visible"
        tools:srcCompat="@drawable/ic_back2x" />

    <TextView
        android:id="@+id/textView_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/textView_Preencha"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/inputText_Nome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:hint="@string/inputText_Nome"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/inputText_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:hint="@string/prompt_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/inputText_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/button_salvarCadastro"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:background="#FFFFFF"
        android:text="@string/textViewButton_Salvar"
        android:onClick="salvarCadastro" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />
</LinearLayout>