<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A5517"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <Button
        android:id="@+id/buttonApagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apagar" />

    <Button
        android:id="@+id/buttonEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Editar" />
</LinearLayout>