<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A5517"
    tools:context=".ListaMateriaActivity">

    <include layout="@layout/content_lista_materia" />

    <ImageButton
        android:id="@+id/imageButton_voltarMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="voltar"
        android:text="@string/imageButton_Voltar" />
    <Button
        android:id="@+id/buttonApagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apagar" />

    <Button
        android:id="@+id/buttonEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Editar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>