<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A5517">

    <EditText
        android:id="@+id/editTextNome4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:ems="10"
        android:shadowColor="#FFFFFF"
        android:text="@string/nota"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="284dp" />

    <EditText
        android:id="@+id/editTextNome3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:ems="10"
        android:shadowColor="#FFFFFF"
        android:text="@string/unidade"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="218dp" />

    <EditText
        android:id="@+id/editTextNome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:ems="10"
        android:shadowColor="#FFFFFF"
        android:text="@string/periodo"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="159dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Preencha os campos"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="78dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="374dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="374dp" />

</androidx.constraintlayout.widget.ConstraintLayout>