<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A5517"
    android:textAlignment="center">

    <TextView
        android:id="@+id/textView_BemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/bemvindo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_entrar"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="100dp"
        android:background="#FFFFFF"
        android:onClick="chamarTelaLogin"
        android:text="@string/textViewButton_Entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_registrar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_BemVindo"
        app:layout_constraintTop_toBottomOf="@+id/textView_BemVindo" />

    <Button
        android:id="@+id/button_registrar"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="100dp"
        android:background="#000000"
        android:onClick="chamarTelaCadastro"
        android:text="@string/textViewButton_Registrar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_BemVindo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/button_entrar"
        app:layout_constraintTop_toBottomOf="@+id/textView_BemVindo" />

</androidx.constraintlayout.widget.ConstraintLayout>